Added logs to catch unexpected session changes